# job-searcher

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
src/job_searcher/: __init__.py  __main__.py  config.py  models.py  observability.py
src/job_searcher/agent/: __init__.py  graph.py  prompts.py  state.py
src/job_searcher/services/: __init__.py  adzuna.py
src/job_searcher/tools/: __init__.py  filter_jobs.py  save_report.py  search_jobs.py  summarize_jobs.py
